Spanish focus tree begin and startup of their civil war tag

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -3,7 +3,8 @@
   ##########################
   # IDEAS
   ##########################
-
+PB_SPR_ultimatum_accepted:0 "Military Restrictions"
+PB_NI_Spanish_Faith:0 "Spanish Faith"
 PB_SPR_national_movement_split:0 "Movimiento Nacional Divided"
 PB_SPR_national_movement_split_desc:0 "The National Movement is a loose coalition of several right, to far-right political parties working together against the socialist menace of the Republican authority. This National Movement, however, is not a ideological monolith and exists out of several political branches: Falangists, Legitimists, Carlists and the old CEDA all struggle for control of the state apparatus and political infighting has become increasingly prominent, with political assassination and other dirty tricks not being as unusual as during the Second Republic. The next congress of the National Movement will finally make clear which faction will become the biggest of the Movement."
 PB_SPR_military_coup:0 "The Mary coup"
@@ -41,16 +42,55 @@ SPR_jc_party:0 "FP"
   ##########################
   # FOCUSSES
   ##########################
-
+SPR_the_old_civilian_industry:0 "Our Former Economy"
+SPR_the_wine_industry:0 "Rebuild the Wine Industry"
+SPR_kickstart_the_fishing_industry:0 "Kickstart Fishing"
+SPR_vehicle_industry:0 "Restart the Vehicle Industry"
+SPR_attract_foreign_businessmen:0 "Attract Foreign Investors"
+SPR_stimulate_trade:0 "Stimulate Trade"
+SPR_support_agricultural_sector:0 "Modernize Agricultural Methods"
+SPR_improve_civilian_output:0 "Increase Civilian Output"
+SPR_recovery_of_entertainment:0 "New Entertainment Industry"
+SPR_provide_for_the_city:0 "Food for the Cities"
+SPR_conversion_to_civilian_economy:0 "New Civilian Economy"
+SPR_promote_sherry:0 "Promote Sherry"
+SPR_the_old_heavy_industry:0 "The Current Economy"
+SPR_revive_the_steel_industry:0 "Blow new Life into the Steel Industry"
+SPR_demobilization:0 "Partial Demobilization"
+SPR_expand_steel_ventures:0 "Expand Steel Ventures"
+SPR_diversify_our_economy:0 "Deal with the Steel Barons"
+SPR_economic_conversion:0 "Rebuild Civilian Industry"
+SPR_surpress_the_black_market:0 "Surpress the Black Market"
+SPR_criminalize_drug_traficking:0 "Criminalize Drug Trafficking"
+SPR_new_education_curriculum:0 "Nationalist Education Curriculum"
+SPR_back_to_the_factory_floors:0 "Back to the Factories"
+SPR_production_quotas:0 "New Production Quotas"
 
 
   ##########################
   # EVENTS
   ##########################
 spain.1.t:0 "The Mary Coup Chaos"
-spain.1.d:0 "Not too long ago, Emilio Mola with support of the army and the right-wing of Spain, has been able to stage a violent coup against the anti-catholic republican government. The republican government was founded in 1911, one year before the official signing of the treaty of A Coruña, founded on the ruins of Madrid after the brutal civil war between Alfonso loyalists and republican forces. However, the years after the treaty were quite unstable with rebellion after rebellion. While stability has always been rare for Spain, the Republicans never bothered to fix the instability and created enemies on all fronts. The 1931 elections would prove to be the last straw, as democratic traditions grinded to a halt with the opposition and coalition not being able to work with the rising Falange party. On the 29th of October, 1932, after a proposal to ban the Falangist party, the party members ran out of parliament, forcing snap elections upon Spain. Those snap elections would never come. With support of the army and the CEDA party, the Falange was able to coup the republican government on the 18th of December. The death of Sanjurjo on the 30th of December forced Emilio Mola to become the next head of state. However, republican forces, while broken, are not defeaten and are organizing themselves on the borders of the Spanish state. Can Mola crush this government and start a new age for Spain?"
+spain.1.d:0 "Not too long ago, Emilio Mola with support of the army and the right-wing of Spain, has been able to stage a violent coup against the anti-catholic republican government. The republican government was founded in 1911, one year before the official signing of the treaty of A Coruña, founded on the ruins of Madrid after the brutal civil war between Alfonso loyalists and republican forces. However, the years after the treaty were quite unstable with rebellion after rebellion. While stability has always been rare for Spain, the Republicans never bothered to fix the instability and created enemies on all fronts.\n\n The 1931 elections would prove to be the last straw, as democratic traditions grinded to a halt with the opposition and coalition not being able to work with the rising Falange party. On the 29th of October, 1932, after a proposal to ban the Falangist party, the party members ran out of parliament, forcing snap elections upon Spain. Those snap elections would never come. With support of the army and the CEDA party, the Falange was able to coup the republican government on the 18th of December. The death of Sanjurjo on the 30th of December forced Emilio Mola to become the next head of state. However, republican forces, while broken, are not defeaten and are organizing themselves on the borders of the Spanish state. Can Mola crush this government and start a new age for Spain?"
 spain.1.a:0 "Probally not..."
-
+spain.2.t:0 "Spanish Violation of the A Coruña Treaty"
+spain.2.d:0 "Under the 7th demand of the A Coruña Treaty, the treaty that ended the Great War between the British and the Spanish kingdoms, Spain is not allowed to field an army that has more than 100 000 men working in it. Recently, however, British spies and ambassadors have notified us about the Spanish army having crossed that 100 000 limit, violating the promises made in the treaty of A Coruña. Thus, strong voices have made it clear that Britain is forced to intervene if it wants to maintain its power across Europe and especially in the Mediterranean. Such an ultimatum would most likely bring Spain back into the fold."
+spain.2.a:0 "Send the ultimatum!"
+spain.2.b:0 "Let's turn a blind eye..."
+spain.3.t:0 "British Ultimatum"
+spain.3.d:0 "Despite our best bet, Britain has finally send an ultimatum regarding our military size violating the despised treaty of A Coruña. Our violation is, if we have to believe the British, a clear sign of agression towards the old Entente and the European status quo and we should swiftly seize our expansion. If we do not adhere to the ultimatum or do not reply in 10 days, Britain will be forced to use violence against the Spanish state and its army and depose the military government in favor of a more 'pro-British' regime. The bottom of the ultimatum is signed by the British minister of foreign affaires."
+spain.3.b:0 "Send a simple, yet firm, \"No\""
+spain.3.a:0 "We cannot fight the British yet"
+spain.4.t:0 "Britain turns a Blind Eye"
+spain.4.d:0 "Even if we violated the 7th article of the treaty of A Coruña, Britain has yet to send us an ultimatum regarding our expansive endeavour. While some were worried about a British mobilization act, relative inactivity from London has confirmed this to not be the case. Whatever it may be, Britain has not bothered to send us an ultimatum or declare war and we can thus only assume that they've turned a blind eye for our violation."
+spain.4.a:0 "Gracias"
+spain.5.t:0 "Spain rejected our Ultimatum"
+spain.5.d:0 "After a tense, several days, words from Madrid have reached London. Well, technically it was only one word: \n\n \"No"\ \n\nSpain has clearly not listened to our warnings of violence and we should now make up our mind on the matter of intervening in Spain or allowing the state to continue its expansive behaviour."
+spain.5.a:0 "Tommy, get your gun!"
+spain.5.b:0 "Spain is not a concern for our empire"
+spain.6.t:0 "Spain accepted our Ultimatum"
+spain.6.d:0 "Our recent ultimatum to the Spanish military has been a stagering success, as Spain has accepted our demands regarding their military expansion."
+spain.6.a:0 "Another victory for the Empire"
   ##########################
   # Decisions
   ##########################
@@ -59,10 +99,21 @@ PB_SPR_dissident_mechanics_desc:0 "The Spanish State uses a custom dissident mec
 PB_SPR_angry_farmers:0 "Spanish Peasant Rebels"
 PB_SPR_angry_farmers_desc:0 "Our recent taxation of the farmers of our nation, combined with the ideological differences between our regime and various groups of farmers has created the perfect climate for peasant rebels to unite against the heavy taxation put on them."
 PB_SPR_angry_catalans:0 "Catalan Rebels"
+PB_SPR_republican_strongholds:0 "Finalize the Mary Coup"
+PB_SPR_republican_strongholds_desc:0 "The Republican Army is far from defeated and is currently reorganizing itself in the strongholds of liberal and republican idealism of Spain, such as Barcelona. If we want to secure the future of the Spanish state and crush the Republican menace forever, we will have to fight them and crush their opposition."
+PB_SPR_occupy_zaragoza:0 "March upon Zaragoza"
+PB_SPR_occupy_barcelona:0 "March upon Barcelona"
 PB_SPR_lower_dissent:0 "Calm the Public"
 PB_SPR_lower_dissent_desc:0 "As to ensure public safety and national cohesion, government officials have begun a campaign to increase trust in the government and stability across our regions."
 PB_SPR_angry_catalans_desc:0 "The Catalan populace has been a general threat towards Spanish stability ever since the ideals of nationalism crossed the pyrenees into Iberia. Catalan nationalists have been extremely hostile towards our regime and we can expect things to turn violent if unanswered."
 Republican_Stronghold:0 "Republican Stronghold"
+PB_SPR_occupy_valencia:0 "March upon Valencia"
+PB_SPR_occupy_murcia:0 "March upon Murcia"
+PB_SPR_occupy_malaga:0 "March upon Malaga"
+PB_SPR_occupy_sevilla:0 "March upon Sevilla"
+PB_SPR_occupy_extremadura:0 "March upon Extremadura"
+PB_SPR_arrest_anarchists:0 "Detain Anarchists"
+PB_SPR_arrest_jacobins:0 "Detain Jacobins"
   ##########################
   # Country Name
   ##########################
@@ -90,3 +141,28 @@ Republican_Stronghold:0 "Republican Stronghold"
  SPR_ds_ADJ:0 "Spanish"
  SPR_cn_ADJ:0 "Spanish"
  SPR_an_ADJ:0 "Spanish"
+
+ SPN_ni:0 "Spain"
+ SPN_ni_DEF:0 "Spanish State"
+ SPN_ds:0 "Spain"
+ SPN_ds_DEF:0 "Spain"
+ SPN_rc:0 "Kingdom of Spain"
+ SPN_rc_DEF:0 "Kingdom of Spain"
+ SPN_an:0 "Spain"
+ SPN_an_DEF:0 "Spain"
+ SPN_cn:0 "Spanish Republic"
+ SPN_cn_DEF:0 "Spain"
+ SPN_lb:0 "Spanish Republic"
+ SPN_lb_DEF:0 "Spain"
+ SPN_ss:0 "Spanish Republic"
+ SPN_ss_DEF:0 "Spain"
+ SPN_jc:0 "Spanish Republic"
+ SPN_jc_DEF:0 "Spanish Republic"
+ SPN_ni_ADJ:0 "Spanish"
+ SPN_rc_ADJ:0 "Spanish"
+ SPN_lb_ADJ:0 "Spanish"
+ SPN_ss_ADJ:0 "Spanish"
+ SPN_jc_ADJ:0 "Spanish"
+ SPN_ds_ADJ:0 "Spanish"
+ SPN_cn_ADJ:0 "Spanish"
+ SPN_an_ADJ:0 "Spanish"
