A whole lot of Spain

--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -3,6 +3,17 @@
   ##########################
   # IDEAS
   ##########################
+
+
+PB_SPR_reconstruction_authority:0 "Autoridad Española de Reconstrucción"
+PB_SPR_unions_gone:0 "Crushed Unions"
+PB_SPR_unions_stay:0 "Cooperation with the Unions"
+PB_SPR_angry_farmers:0 "Angered Farmers"
+PB_SPR_angry_farmers_desc:0 "The temporary military tax enforced by the military government has clearly angered a large group of both conservative and socialist farmers, leaving the tax to be almost worthless."
+PB_SPR_military_training:0 "Military Training"
+PB_SPR_military_training_1:0 "Military Training"
+PB_SPN_republican_front:0 "Republican Front"
+PB_SPN_republican_front_desc:0 "The Republican Front is the term used to describe the coalition of the Popular Front plus the Liberal Party during the Second Spanish Civil War. This wartime coalition was mostly born out of shared hatred for the new, nationalist Spanish government that had overthrown the old Republican order in 1932. While it is an united front, the coalition is clearly divided along ideological lines as its members range from anarcho-jacobins to conservative republicans."
 PB_SPR_ultimatum_accepted:0 "Military Restrictions"
 PB_NI_Spanish_Faith:0 "Spanish Faith"
 PB_SPR_national_movement_split:0 "Movimiento Nacional Divided"
@@ -43,6 +54,7 @@ SPR_jc_party:0 "FP"
   # FOCUSSES
   ##########################
 SPR_the_old_civilian_industry:0 "Our Former Economy"
+SPR_rebuild_spain:0 "Spanish Reconstruction Authority"
 SPR_the_wine_industry:0 "Rebuild the Wine Industry"
 SPR_kickstart_the_fishing_industry:0 "Kickstart Fishing"
 SPR_vehicle_industry:0 "Restart the Vehicle Industry"
@@ -65,7 +77,22 @@ SPR_criminalize_drug_traficking:0 "Criminalize Drug Trafficking"
 SPR_new_education_curriculum:0 "Nationalist Education Curriculum"
 SPR_back_to_the_factory_floors:0 "Back to the Factories"
 SPR_production_quotas:0 "New Production Quotas"
-
+SPR_civil_war_averted:0 "§GSpain has been safed from civil conflict by crushing the Republican Forces§!"
+SPR_coup_ongoing:0 "§RThe Mary Coup is ongoing§!"
+SPR_mola_government:0 "Mola in Power"
+SPR_quick_military_manuevers:0 "Quick Military Manuevers"
+SPR_crackdown_on_catalan_nationalism:0 "Criminalize Catalan Nationalism"
+SPR_crush_anarchists:0 "Cure our Anarchist Plague"
+SPR_temporary_tax_increase:0 "Temporary Military Tax"
+SPR_arrest_disloyal_farmers:0 "Arrest Disloyal Farmers"
+SPR_interogate_cnt_leaders:0 "The CNT-FAI Problem"
+SPR_execute_them:0 "The Blade Awaits, Señor"
+SPR_deal_with_the_unions:0 "Mutual Friendship with the Unions"
+SPR_clean_hands_to_show:0 "Observe our Clean Hands!"
+SPR_cooperate_cnt:0 "§GThe government cooperates with the CNT-FAI unions§!"
+SPR_fucked_cnt:0 "§YThe government refuses to cooperate with the CNT-FAI unions§!"
+SPR_angry_farm_flag:0 "§YFarmers refuse to pay our temporary tax§!"
+SPR_break_the_popular_front:0 "Dismember the Popular Front"
 
   ##########################
   # EVENTS
@@ -91,6 +118,40 @@ spain.5.b:0 "Spain is not a concern for our empire"
 spain.6.t:0 "Spain accepted our Ultimatum"
 spain.6.d:0 "Our recent ultimatum to the Spanish military has been a stagering success, as Spain has accepted our demands regarding their military expansion."
 spain.6.a:0 "Another victory for the Empire"
+spain.7.t:0 "Republicans Reorganized"
+spain.7.d:0 "Despite our best effort of crushing the Republican forces, a substantial amount of them have been able to reorganize in traditionally republican strongholds in Spain. Thus, with their forces reorganized, they've declared a campaign against the, in their eyes, illegitimate government of Spain. Mola has already adressed Madrid on the issue during a broadcast this monday, pressing the issue to be one of national scale. His broadcast, while not particularly inspiring, had a great morale effect on our troops, which patiently await orders from the Madrid high command."
+spain.7.a:0 "No Pasaran!"
+spain.7.b:0 "United against jacobinism, we crusaders fight!"
+spain.8.t:0 "The Death of the Republic"
+spain.8.d:0 "The recent few months Spain had experienced were rough, as outlaws and other republican sympathisers terrorised Spain in their campaign of revenge. However, the Spanish nationalist army was able to corner the reorganizing Republican forces today, leading to a crushing defeat for the Republican army and most of the leadership being killed in combat. With the Republican menace gone, Spain is open to reform and go down a path towards its deserved glory as an empire, comparable to the empire of Charles."
+spain.8.a:0 "Una, Grande y Libre!"
+SPR_change_to_SPN_tooltip:0 "§YSwitches tag to the Spanish Republic§!"
+spain.10.t:0 "End of the Guerilla Campaign"
+spain.10.d:0 "With the start of the new Civil War, the Republican army has stopped its guerilla campaign against the poor working citizens and the factories that were under Mola's control."
+spain.10.a:0 "Great"
+spain.11.t:0 "Victory of the Civil War"
+spain.11.d:0 "As the black boots of the Spanish military walk down upon the streets of Madrid and Barcelona, the nationalist government rejoices in victory, as the enemy of the state has been vanquished. With the last military victory of this civil war, Spain has secured its future under the national movement and shall rise to great power status under its new government. However, even if celebration happens, the members of the movement are already scheming against their opponents and it won't take long before Spain will divide once more."
+spain.11.a:0 "Victory for now"
+spain.12.t:0 "The Emergency Tax"
+spain.12.d:0 "Recently, Mola adressed the Spanish nation on the problems it faced at this very moment. Stating that the Republican threat is one to be taken serious, Mola quickly turned the subject towards military tax. While an unpopular move, Mola sees the tax as a temporary and necessary act for Spain, argueing that any military support in their conflict against the republicans could help."
+spain.12.a:0 "It's just temporary guys!"
+spain.13.t:0 "The CNT-FAI"
+spain.13.d:0 "The CNT-FAI unions have been powerfull political entities in Spain since the end of the monarchy after the Great War. They often have been disrupting the government through both strikes and revolutions and their anarchist ideology makes them a primary enemy of our authoritarian and nationalist ambitions. A meeting with the collective leadership of the CNT-FAI has been organized and we'll have to decide our policy on the future of this part of our opposition."
+spain.13.a:0 "Mutual friendship with the unions could come handy..."
+spain.13.b:0 "They'll have to fear us"
+spain.14.t:0 "Farmers united against Tax"
+spain.14.d:0 "The recent emergency tax of the military junta has been subject of heated debate for several weeks now and tension has finally hit a boiling point, as angered farmers have united in guerilla groups against the government tax. While possibly a noble cause in the eyes of some, the groups quickly have turned into ordinary bandits, stealing from the rich and poor for their own benefit and, worst of all, still not paying their taxes. The government has to make it loud and clear to these groups of so-called heroes that they're not welcome."
+spain.14.a:0 "Farmers are no threat to any government!"
+spain.15.t:0 "Fall of the Popular Front"
+spain.15.d:0 "Recent political infighting among the ideological members of the popular front opened up an opportunity for the military junta to eliminate the united opposition entiretly. Manuel Azaña's representation of the popular front became a point of disagreement between the syndicalist-jacobin branches of the front and the liberal branches of the front, with both branches threatening to end the coalition. Due to our extensive espionage inside the coalition and several unethical political methods, we've been able to exploit the situation to the fullest: Today, during one of the most heated discussions yet, the radical left of the party ended the coalition, leaving the popular front and splitting into several parties, the Partido Sindicalista of Ángel Pestaña currently being the largest of the splinters. As response, Niceto's liberal branch followed, forming the Partido Republicana Progresista. Manuel Azaña and the remnants of the popular front now remain as the Izquierda Republicana, ending the united opposition against the Mola regime."
+spain.15.a:0 "And there ends our largest opponent."
+SPR_CUR_FIRST:0 "§YThe current economy is to be adressed first§!"
+spain.16.t:0 "Autoridad Española de Reconstrucción"
+spain.16.d:0 "In his latest talk with the nation, [SPR.GetLeader] announced the formation of a new reconstruction authority situated in Madrid, which will bear the task of repairing the damage done by the republican militias across Spain and funding the conversion of the economy into a new, civilian one, as to return prosperity to Spain. His plans of the new reconstruction authority have already been given the green light by the high command and [SPR.GetLeader] has already appointed Alfonso Peña Boeuf as the leading figure of the authority. Having studied at the school of engineering of roads, canals and ports, Alfonso is considered an infrastructural genius by many of his peers and [SPR.GetLeader] has big plans for the balding engineer."
+spain.16.a:0 "A great project is coming!"
+spain.17.t:0 "The Status of Spanich Economics"
+spain.17.d:0 "With the establishment of the reconstruction authority, the first issue to adress is the militarized economy. Mola and the rest of the military junta had mobilized the Spanish economy after the Mary coup, as fears of civil war were rather real in Spain. This, however, has damaged our economy rather badly, leaving us with a mobilized economy, but without a decent civilian basis for it. Basic products like civilian clothing, vehicles and even some parts of the food sector were completely claimed by the Spanish army in the case of combat. However, with the civil unrest coming to a halt, Spain is forced to demobilize its economy if it wants to start its economic recovery."
+spain.17.a:0 "We will do what needs to be done"
   ##########################
   # Decisions
   ##########################
@@ -114,6 +175,8 @@ PB_SPR_occupy_sevilla:0 "March upon Sevilla"
 PB_SPR_occupy_extremadura:0 "March upon Extremadura"
 PB_SPR_arrest_anarchists:0 "Detain Anarchists"
 PB_SPR_arrest_jacobins:0 "Detain Jacobins"
+PB_SPR_spanish_civil_war:0 "Republican Reorganization [SPN.GetFlag]"
+PB_SPR_spanish_civil_war_desc:0 "Our initial victory against the weak Republican government may be recent, it is far from the finishing blow, as Republican forces have scattered across Spain. These troops, now without a central command, have made serious effort to reorganize under the Republican banner and fight a war against the coup leaders. We'll have to seriously crush this uprising if we want to succeed."
   ##########################
   # Country Name
   ##########################
