--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -20,6 +20,8 @@ PB_SPR_national_movement_split:0 "Movimiento Nacional Divided"
 PB_SPR_national_movement_split_desc:0 "The National Movement is a loose coalition of several right, to far-right political parties working together against the socialist menace of the Republican authority. This National Movement, however, is not a ideological monolith and exists out of several political branches: Falangists, Legitimists, Carlists and the old CEDA all struggle for control of the state apparatus and political infighting has become increasingly prominent, with political assassination and other dirty tricks not being as unusual as during the Second Republic. The next congress of the National Movement will finally make clear which faction will become the biggest of the Movement."
 PB_SPR_military_coup:0 "The Mary coup"
 PB_SPR_military_coup_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
+PB_SPR_military_coup_1:0 "The Mary coup"
+PB_SPR_military_coup_1_desc:0 "The recent coup d’état against the old republican government still is in full swing, as the nationalist military has started its purging of the old radical socialists of the PSOE and CNT, while the republican forces reorganize themselves in the city of Barcelona. While Mola does not enjoy the support of most of the Spanish populace, he does reign with the support of the national armed forces and navy and is able to consolidate the power of the loose coalition, known as the national movement. This reign of terror, while effective in consolidating power, has enraged the unions and socialist workers of Spain and many fear that the tension can easily spark another civil conflict."
 PB_SPR_treaty_1:0 "Treaty of A Coruña"
 PB_SPR_treaty_1_desc:0 "The Treaty of A Coruña is for many Spanish nationalists a humiliation Spain has to overcome in the next decade. The Treaty, signed by the chaotic second Spanish Republic in 1912, made an end to Spanish hegemony overseas and limited the Spanish army, navy and airforce. Spain and its Bourbon dynasty also were forced to take the blame for the Great War partly, sharing it with France, and thus being forced to repay the Entente for the costly Iberian campaign. The treaty is seen differently by the different groups of the Movimiento Nacional, but all parties do agree upon ending the treaty in the near future. \n\n§RIf Spain yields an army above 100 000 men or if Spain has accepted a Bourbon monarch on her throne, Britain will demand us to follow the treaty of A Coruña or face the consequences of war against the full force of Britain and the Commonwealth of Independent States.§!"
   ##########################
@@ -93,7 +95,48 @@ SPR_cooperate_cnt:0 "§GThe government cooperates with the CNT-FAI unions§!"
 SPR_fucked_cnt:0 "§YThe government refuses to cooperate with the CNT-FAI unions§!"
 SPR_angry_farm_flag:0 "§YFarmers refuse to pay our temporary tax§!"
 SPR_break_the_popular_front:0 "Dismember the Popular Front"
-
+SPR_falange_in_power:0 "Falange in Power"
+SPR_awaken_spanish_irredentism:0 "Awaken Spanish Irredentism"
+SPR_ban_the_republican_flag:0 "Ban the Republican Flag"
+SPR_denounce_catalan_nationalism:0 "Denounce Catalan Nationalism"
+SPR_basque_friendship:0 "Appreciate Basque Loyalty"
+SPR_crackdown_upon_carlism:0 "The Basque Bastion of Carlism"
+SPR_contest_british_gibraltar:0 "Fortify the Gibraltar Border"
+SPR_promote_militarism:0 "Glorify Imperialism"
+SPR_international_falangist_volunteers:0 "International Falangist Volunteers"
+SPR_purge_carlist_elements:0 "Bar Carlists from Government"
+SPR_nationalist_mapping_program:0 "Hand out Nationalist Maps"
+SPR_catholic_nationalism:0 "Proud to be Catholic"
+SPR_visigothic_archeology:0 "Visigothic Archeology Programs"
+SPR_portugal_as_province:0 "Portugal as Spanish Province"
+SPR_support_hispanidad:0 "Hispanidad"
+SPR_reconsider_the_economic_policy:0 "Reform the Economy"
+SPR_national_syndicalist_economics:0 "National Syndicalism"
+SPR_natalist_policies:0 "Natalism"
+SPR_cooperation_of_classes:0 "Cooperation of Classes"
+SPR_servitude_to_the_united_nation:0 "Servitude to the United Nation"
+SPR_humanize_the_cogs:0 "Humanize the Cogs"
+SPR_employee_syndicates:0 "Employee Syndicates"
+SPR_employer_syndicates:0 "Employer Syndicates"
+SPR_nationalize_credit_facilities:0 "Nationalize Credit Facilities"
+SPR_adress_the_foreign_policy:0 "Adress the Foreign Policy"
+SPR_militarize_foreign_policy:0 "Violence is our Policy!"
+SPR_great_military_budget:0 "Increase Military Spending"
+SPR_end_conservative_militarism:0 "Purge Conservatism in the Military"
+SPR_virtues_of_economic_violence:0 "Virtues of Economic Violence"
+SPR_sweeping_agrarian_reforms:0 "Sweeping Agricultural Reforms"
+SPR_stimulate_industrial_expansion:0 "Stimulate Industry"
+SPR_lower_loan_interest:0 "Lower Loan Interest"
+SPR_innovation_in_the_factory:0 "Factory Development"
+SPR_improve_farming_techniques:0 "Improved Farming Techniques"
+SPR_reclaim_agrarian_wastelands:0 "Reclaim Agrarian Wastelands"
+SPR_seek_for_french_recognision:0 "Ask for French Recognition"
+SPR_nantes_conference:0 "Nantes Conference"
+SPR_tone_down_irredentism:0 "Lower Irredentist Voices"
+SPR_prepare_for_invasion:0 "Prepare the Invasion Forces"
+SPR_send_an_ultimatum:0 "The Galicia Ultimatum"
+SPR_join_the_revanchiste_pact:0 "Join the Revanchist Pacte"
+SPR_militarize_the_portuguese_border:0 "Militarize the Portuguese Border"
   ##########################
   # EVENTS
   ##########################
@@ -152,6 +195,28 @@ spain.16.a:0 "A great project is coming!"
 spain.17.t:0 "The Status of Spanich Economics"
 spain.17.d:0 "With the establishment of the reconstruction authority, the first issue to adress is the militarized economy. Mola and the rest of the military junta had mobilized the Spanish economy after the Mary coup, as fears of civil war were rather real in Spain. This, however, has damaged our economy rather badly, leaving us with a mobilized economy, but without a decent civilian basis for it. Basic products like civilian clothing, vehicles and even some parts of the food sector were completely claimed by the Spanish army in the case of combat. However, with the civil unrest coming to a halt, Spain is forced to demobilize its economy if it wants to start its economic recovery."
 spain.17.a:0 "We will do what needs to be done"
+spain.18.t:0 "Preparing the First National Movement Congress"
+spain.18.d:0 "With the recent stabilization of Spain, the National Movement coalition has finally been able to start preparations for their first national congress next year. The parties inside the national movement will all attend the national congress, as the congress will decide the fate of Spain, choosing a coalition party to rule Spain. Both the falangists of the FET y de la JONS, as the monarchist bloc of the carlists have been heavily involved in the preparations of the congress, with the alfonsists being too divided on the issue and the CEDA being barred from the preparations entirely, due to their earlier association with the Spanish republic and its parliament. The military has also agreed upon following the choices set by the congress, but Mola himself seems to be less willing in giving up his leadership."
+spain.18.a:0 "Let's prepare ourselves!"
+spain.19.t:0 "The death of Mola"
+spain.19.d:0 "The leader of the Spanish military junta, Emilio Mola, has been confirmed dead this morning. The military commander, known as el director, strolled across the city of Madrid with his group of military bodyguards, when he became a part of an incidental carcrash. Mola died on the spot and the man responsible for the leader's death has been sentenced to death, even after he insisted that it was just an accident. In the wake of his death, the young Francisco Franco, veteran of the 1901 Rif conflict, was put in charge of the provisional government."
+spain.19.a:0 "May Mola rest in peace"
+spain.20.t:0 "New Geography Books"
+spain.20.d:0 "With the recent decision to renew the education curriculum of Spain into a more government friendly form, the details have finally become a big part of the debate. The first subject to adress is geography, with the falangist and carlist parties pressing the issue of Pan-Iberianism and the territory of Gibraltar. They've favored changing the geography textbooks, as to show all Spanish claims, including Portugal and its colonies, Gibraltar, Andorra and even some parts of French Catalonia. While radical, many inside the movement seem to not have a problem with changing the textbooks in such a way."
+spain.20.a:0 "Include all Spanish Claims!"
+spain.20.b:0 "Only include Gibraltar"
+spain.20.c:0 "Let's not fool ourselves with claims"
+spain.21.t:0 "New History Books"
+spain.21.d:0 "The next subject to tackle in the curriculum reformation is the history textbooks, a important subject for most right-wing parties in the movement. The Falangist Party, Alfonsists and Carlists have already butted heads on the issue, as not one party can decide what to highlight in the textbooks. The falangists have made it their point to highlight Spanish cultural supremacy and its most important battles against barbarism. The carlists, on the other hand, have voiced their opinions in favour of portraying the carlists monarchs as best as possible and highlighting catholic imperialism. As last, the alfonsist parties have mostly been in favor of portraying the most recent years of the monarchy in a better light compared to the old republican textbooks."
+spain.21.a:0 "Highlight the Carlist monarchs and their catholic supremacy"
+spain.21.b:0 "Highlight the cultural success of Spanish imperialism"
+spain.21.c:0 "Highlight the Alfonso monarchy and its Africanism"
+spain.22.t:0 "New Economics Books"
+spain.22.d:0 "Last, but definetely not least, is the subject of economy. While economy seem to be of little controversy, it was one of the only subjects that almost caused a brawl today between the Falange and the Carlist Party. While the Falange proposed the promotion of national syndicalist economics and its benefits, the carlists denounced the falangists as modernists and promoted the idea of pre-enlightenment economics. The Carlist denouncement of national syndicalism quickly led to several Falangist party members stepping towards the carlist side of parliament, but they were quickly detained by the parliament soldiers, keeping tension at a minimum. It's rather clear that both of these parties will not like any decision we will make."
+spain.22.a:0 "National-Syndicalist Economics"
+spain.22.b:0 "Pre-Enlightenment Economics"
+spain.22.c:0 "Free Market Economics"
+SPR_EDUCATION_CHAIN:0 "§GAn event chain will allow us to decide our new education curriculum and what to teach the next politically active generation of Spain.§!"
   ##########################
   # Decisions
   ##########################
@@ -229,3 +294,5 @@ PB_SPR_spanish_civil_war_desc:0 "Our initial victory against the weak Republican
  SPN_ds_ADJ:0 "Spanish"
  SPN_cn_ADJ:0 "Spanish"
  SPN_an_ADJ:0 "Spanish"
+##########Descriptions for leaders####
+SPR_Mola_Desc:0 "Born on the 9th of July, 1887, on the tropical island of Cuba, Emilio Mola would never know rest in his life. Soon after his birth, the familie split, with the maternal branch joining the revolutionaries and Mola's father serving the Spanish forces. Quickly moving to the Spanish kingdom, Mola enrolled in the §YInfantry Academy of Toledo§! around 1910, serving in the Rif War as a Brigadier-General. Becoming one of Alfonso's favorites, Mola was rewarded with the position of Director-General of Security in 1906, being responsible for the growing Republican issue. However, his career as Director-General was short, as the §YSpanish Civil War of 1910§! would end the reign of Alfonso the 13th. The new Republican government initially wanted Mola executed for his royalist opinion, but with the help of CEDA and Falangist members, Mola became a military governor in §YNavarre§!. There he was able to drum up far-right support and, during the §YMary Coup§! was swiftly able to complete conquer the Basque region for the nationalist government. The death of Sanjurjo would, once again, begin Mola's career as Head of State. His paranoia has become a trademark of the Spanish security and his fear for the fifth column has drove Spain to near-constant purging."
